test/parsing/errors/recordInheritanceNotSupported.compopts
--detailed-errors # recordInheritanceNotSupported-detailed.good
--no-detailed-errors # recordInheritanceNotSupported-brief.good
